3.BasesDeDatos/zalandoPostgresOperator/ingress-grafana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: knative-monitoring
spec:
  # ingressClassName: nginx
  rules:
  - host: grafana.192.168.64.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port: 
              number: 30802
